test/must_fail/api/must_fail_hint_args0.ref
error: hint(message) require exactly 1 arguments but 0 was given
  [must_fail_hint_args0.ngjs:0:0] in <anonymous>()
    hint();
    ^

hint: function 'hint(message)' was called with 0 arguments

Stack trace (1 frames):
  [must_fail_hint_args0.ngjs:0:0] in <anonymous>()
    hint();
    ^

exit(7)
