test/must_fail/api/must_fail_hint_args0.ngjs
#!/usr/bin/env ngspicejs
// hint wants 1 string arg
// linter: ngspicejs-lint
"use strict";

hint();

